# rust_life_wasm

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
